# agro-trade-native

./: .codecov.yml  .commitlintrc.json  .gitignore  .lintstagedrc.json  .prettierignore  .prettierrc.json  .vercel-trigger  ADMIN_DASHBOARD_COMPLETE_ANALYSIS.md  ADMIN_DASHBOARD_RESTRUCTURE_PLAN.md  AGENTS.md  AUTOMATIC_OFFER_SYSTEM_STATUS.md  AUTONOMOUS_SYSTEM_READY.md  BUILD_ERRORS_FIX_PLAN.md  CLAUDE.md  CLEANUP_SUMMARY.md  COMPONENT_ANALYSIS.md  CONTAINER_REDUCTION_SUMMARY.md  CRITICAL_GAPS_ANALYSIS.md  DAILY_STANDUP_AGENT_README.md  DAILY_STANDUP_REPORT_2025-10-18.md  DAY_1_QUICK_START_CHECKLIST.md  DAY_1_UI_POLISH_REPORT.md  DAY_1_VISUAL_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  END_TO_END_DEMO_GUIDE.md  FINAL_FIX_SUMMARY.md  FIXES_FEB20.md  GOOGLE_MAPS_INTEGRATION_REPORT.md  GREENBLOCK.md  INSPECTOR_PORTAL_SUMMARY.md  INTEGRATION_STATUS.json  LICENSE  MAP_BOUNDARY_UPDATE.md  OFFER_API_FLOW.md  OFFER_API_IMPLEMENTATION.md  OFFER_CREATION_WORKFLOW_ANALYSIS.md  ONBOARDING_INTEGRATION_SUMMARY.md  ONBOARDING_LAYOUT_FIX.md  P2-1_COMPLETION_SUMMARY.md  (+36 more)
.claude/: CLAUDE.md  DOCUMENTATION_STANDARDS.md  README.md  launch.json  settings.json  settings.local.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
contracts-solana/programs/agro-escrow/: Cargo.toml
contracts-solana/programs/agro-escrow/src/: error.rs  lib.rs  state.rs
contracts-solana/programs/agro-escrow/src/instructions/: accept_admin.rs  create_escrow.rs  initialize.rs  mod.rs  nominate_admin.rs  raise_dispute.rs  refund.rs  release_funds.rs  resolve_dispute.rs
(+1996 files in other folders)
