[package]
name = "agro-escrow"
version = "0.1.0"
description = "AgroTrade escrow program — USDC-based agricultural trade escrow on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agro_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
